<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/money_login"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novcanik_sistem_za_studente_raf_a"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/ime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/unesite_ime"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            />
        <EditText
            android:id="@+id/prezime"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/unesite_prezime"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            />
        <EditText
            android:id="@+id/banka"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/unesite_banku"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Unesite sifru"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            />
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/prijava"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/button"
            />
    </LinearLayout>
</LinearLayout>