<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Podaci o prihodu/rashodu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />

        <ImageView
            android:id="@+id/imageDolar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/dollar"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/naslovIzmenaEt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Naslov"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="35dp"
            />
        <EditText
            android:id="@+id/kolicinaIzmenaEt"
            android:layout_width="300dp"
            android:editable="false"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Kolicina"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="35dp"
            />
        <EditText
            android:id="@+id/opisIzmena"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="left"
            android:hint="@string/opis"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/playBtn"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/play_audio"/>

        <Button
            android:id="@+id/izmeniPRBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/izmeni"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            />

        <Button
            android:id="@+id/odustaniPRBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/odustani" />
    </LinearLayout>
</LinearLayout>